--- a/MvvmLight/MahappsWindow.xaml
+++ b/MvvmLight/MahappsWindow.xaml
@@ -1,15 +1,17 @@
-﻿<Window x:Class="MvvmLight.MainWindow"
+﻿<Controls:MetroWindow x:Class="MvvmLight.MahappsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
+         xmlns:wpf="clr-namespace:TheArtOfDev.HtmlRenderer.WPF;assembly=HtmlRenderer.WPF"
         xmlns:ignore="http://www.galasoft.ch/ignore"
         mc:Ignorable="d ignore"
         Height="300"
         Width="300"
         Title="MVVM Light Application"
-        DataContext="{Binding Main, Source={StaticResource Locator}}">
-    
+        DataContext="{Binding Main, Source={StaticResource Locator}}" ResizeMode="CanResizeWithGrip">
+
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -18,16 +20,20 @@
         </ResourceDictionary>
     </Window.Resources>
 
-    <Grid x:Name="LayoutRoot">
+    <StackPanel>
 
-        <TextBlock FontSize="36"
+        <TextBlock FontSize="16"
                    FontWeight="Bold"
                    Foreground="Purple"
                    Text="{Binding WelcomeTitle}"
                    VerticalAlignment="Center"
                    HorizontalAlignment="Center"
                    TextWrapping="Wrap" />
-        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="105,239,0,0" VerticalAlignment="Top" Width="75" Command="{Binding ShowView2Command}" />
-
-    </Grid>
-</Window>
+        <wpf:HtmlPanel Text="&lt;p&gt; &lt;h1&gt; Hello World &lt;/h1&gt; This is html rendered text&lt;/p&gt;"/>
+        <wpf:HtmlPanel Text="{Binding Html}"/>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" >
+            <Button x:Name="button" Content="Button"  Margin="10" Style="{DynamicResource SquareButtonStyle}" />
+            <Button x:Name="button2" Margin="10" Content="Button" Style="{StaticResource AccentedSquareButtonStyle}" />
+        </StackPanel>
+    </StackPanel>
+</Controls:MetroWindow>
