--- a/MvvmLight/MainWindow.xaml
+++ b/MvvmLight/MainWindow.xaml
@@ -1,15 +1,24 @@
-﻿<Window x:Class="MvvmLight.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:ignore="http://www.galasoft.ch/ignore"
-        mc:Ignorable="d ignore"
-        Height="300"
-        Width="300"
-        Title="MVVM Light Application"
-        DataContext="{Binding Main, Source={StaticResource Locator}}">
-    
+﻿<Controls:MetroWindow x:Name="xWindow"
+                      x:Class="MvvmLight.MainWindow"
+                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                      xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
+                      xmlns:wpf="clr-namespace:TheArtOfDev.HtmlRenderer.WPF;assembly=HtmlRenderer.WPF"
+                      xmlns:ignore="http://www.galasoft.ch/ignore"
+                      mc:Ignorable="d ignore"
+                      xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
+                      Dialog:DialogParticipation.Register="{Binding}"
+                      xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+                      xmlns:command="http://www.galasoft.ch/mvvmlight"
+                      GlowBrush="{DynamicResource AccentColorBrush}"
+                      WindowStartupLocation="CenterScreen"
+                      Height="600"
+                      Width="800"
+                      Title="XS-Select"
+                      DataContext="{Binding Main, Source={StaticResource Locator}}" ResizeMode="CanResizeWithGrip" Icon="Resources/icon.ico" Loaded="MetroWindow_Loaded">
+
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -18,16 +27,35 @@
         </ResourceDictionary>
     </Window.Resources>
 
-    <Grid x:Name="LayoutRoot">
+    <Controls:MetroWindow.RightWindowCommands>
+        <Controls:WindowCommands>
+            <Button Content="instellingen" Command="{Binding ShowSettingsWindow}" />
+        </Controls:WindowCommands>
+    </Controls:MetroWindow.RightWindowCommands>
 
-        <TextBlock FontSize="36"
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <i:InvokeCommandAction Command="{Binding LoadCommand}" CommandParameter="{Binding ElementName=xWindow}" />
+        </i:EventTrigger>
+        <i:EventTrigger EventName="Closing">
+            <command:EventToCommand Command="{Binding CloseCommand}" PassEventArgsToCommand="True" />
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
+    
+    <StackPanel>
+
+        <TextBlock FontSize="16"
                    FontWeight="Bold"
                    Foreground="Purple"
                    Text="{Binding WelcomeTitle}"
                    VerticalAlignment="Center"
                    HorizontalAlignment="Center"
                    TextWrapping="Wrap" />
-        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="105,239,0,0" VerticalAlignment="Top" Width="75" Command="{Binding ShowView2Command}" />
-
-    </Grid>
-</Window>
+        <wpf:HtmlPanel Text="&lt;p&gt; &lt;h1&gt; Hello World &lt;/h1&gt; This is html rendered text&lt;/p&gt;"/>
+        <wpf:HtmlPanel Text="{Binding Html}"/>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" >
+            <Button x:Name="button3" Content="Button3"  Margin="10" Style="{DynamicResource SquareButtonStyle}" Command="{Binding ShowDialog}" />
+            <Button x:Name="button4" Content="Button4"  Margin="10" Style="{StaticResource AccentedSquareButtonStyle}" Command="{Binding ShowProgressDialog}" />
+        </StackPanel>
+    </StackPanel>
+</Controls:MetroWindow>
